add camera authorization for users :camera:

--- a/anti-waste/anti-waste/Info.plist
+++ b/anti-waste/anti-waste/Info.plist
@@ -42,6 +42,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) Nous avons besoin de l&apos;accès à votre caméra afin de scanner les produits.</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
