--- a/anti-waste/anti-waste/Info.plist
+++ b/anti-waste/anti-waste/Info.plist
@@ -7,6 +7,8 @@
 		<string>Lato-Bold.ttf</string>
 		<string>Lato-Heavy.ttf</string>
 		<string>Lato-Regular.ttf</string>
+		<string>OpenSans-Bold.ttf</string>
+		<string>OpenSans-Regular.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
