--- a/anti-waste/anti-waste/Info.plist
+++ b/anti-waste/anti-waste/Info.plist
@@ -9,6 +9,9 @@
 		<string>Lato-Regular.ttf</string>
 		<string>OpenSans-Bold.ttf</string>
 		<string>OpenSans-Regular.ttf</string>
+		<string>ProximaNova-SemiBold.ttf</string>
+		<string>ProximaNova-Regular.ttf</string>
+		<string>ProximaNova-Bold.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
